[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshspawner"
version = "0.1.0"
description = "JupyterHub spawner which launches single-user servers over SSH"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "sshspawner maintainers" }
]
dependencies = [
  "asyncssh",
  "jupyterhub",
  "traitlets",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
